--- a/frontend/src/assets/ui/button.css
+++ b/frontend/src/assets/ui/button.css
@@ -1,14 +1,24 @@
-._button {
+._button,
+._button-danger {
   width: 100%;
   padding: 0.75rem 1.25rem;
-  background-color: var(--color-button);
 
-  border: 1px solid var(--color-border);
   border-radius: 0.5rem;
   outline: none;
   
   font-size: 0.875rem;
   font-weight: 500;
-  color: var(--color-text);
   text-transform: uppercase;
+}
+
+._button {
+  background-color: var(--color-button);
+  border: 1px solid var(--color-border);
+  color: var(--color-text);
+}
+
+._button-danger {
+  background-color: var(--color-background-soft);
+  border: 1px solid var(--color-border-danger);
+  color: var(--color-button-danger);
 }
